; ModuleID = '/home/carl/AnghaBench/freebsd/lib/librpcsvc/extr_xcrypt.c_passwd2des.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/librpcsvc/extr_xcrypt.c_passwd2des.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @passwd2des(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = call i32 @bzero(i8* %6, i32 8)
  store i32 0, i32* %5, align 4
  br label %8

8:                                                ; preds = %26, %2
  %9 = load i8*, i8** %3, align 8
  %10 = load i8, i8* %9, align 1
  %11 = icmp ne i8 %10, 0
  br i1 %11, label %12, label %30

12:                                               ; preds = %8
  %13 = load i8*, i8** %3, align 8
  %14 = getelementptr inbounds i8, i8* %13, i32 1
  store i8* %14, i8** %3, align 8
  %15 = load i8, i8* %13, align 1
  %16 = sext i8 %15 to i32
  %17 = shl i32 %16, 1
  %18 = load i8*, i8** %4, align 8
  %19 = load i32, i32* %5, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i8, i8* %18, i64 %20
  %22 = load i8, i8* %21, align 1
  %23 = sext i8 %22 to i32
  %24 = xor i32 %23, %17
  %25 = trunc i32 %24 to i8
  store i8 %25, i8* %21, align 1
  br label %26

26:                                               ; preds = %12
  %27 = load i32, i32* %5, align 4
  %28 = add nsw i32 %27, 1
  %29 = srem i32 %28, 8
  store i32 %29, i32* %5, align 4
  br label %8

30:                                               ; preds = %8
  %31 = load i8*, i8** %4, align 8
  %32 = call i32 @des_setparity(i8* %31)
  ret void
}

declare dso_local i32 @bzero(i8*, i32) #1

declare dso_local i32 @des_setparity(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
